# game-study

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  SECURITY.md  create_test_video.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-minimal.txt  requirements-webrtc.txt  requirements.in  requirements.txt  test_basic.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
configs/: roi_defaults.yaml  triggers.yaml
configs/prompts/: system.txt
docs/: USECASES.md
src/: __init__.py  constants.py  exceptions.py  health.py  main.py
src/audio/: __init__.py  capture.py  stt_client.py  vad.py
src/capture/: __init__.py  base.py  capture_card.py  screen_capture.py  video_file.py
src/diagnostics/: __init__.py  audio_check.py  audio_diagnostics.py  report.py  system_check.py
src/dialogue/: __init__.py  openai_client.py  realtime_client.py  templates.py
src/review/: __init__.py  analyzer.py  report.py  scorer.py  stats.py
src/trigger/: __init__.py  engine.py  rules.py
src/utils/: __init__.py  constants.py  exceptions.py  logger.py  metrics.py  rate_limiter.py  retry.py  time.py  webrtc.py
src/vision/: __init__.py  anchors.py  calibration.py  ocr.py  roi.py  state_builder.py  yolo_detector.py
tests/: conftest.py  test_exceptions.py  test_integration.py  test_logger.py  test_rate_limiter.py  test_retry.py  test_state_builder.py  test_templates.py  test_trigger_engine.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_audio_capture.py  test_capture.py  test_conftest.py  test_diagnostics.py  test_dialogue_modules.py  test_exceptions.py  test_main.py  test_rate_limiter.py  test_retry.py  test_review.py  test_stt_client.py  test_time.py  test_trigger_rules.py  test_utilities.py  test_utilities_extra.py  test_vad.py  test_vision_modules.py  test_webrtc_security.py
tests/usecases/: test_usecase_flows.py  test_usecases.py
